<?xml version="1.0" encoding="UTF-8"?>
<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="13771" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
    <device id="retina4_7" orientation="portrait">
        <adaptation id="fullscreen"/>
    </device>
    <dependencies>
        <deployment identifier="iOS"/>
        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="13772"/>
        <capability name="Safe area layout guides" minToolsVersion="9.0"/>
        <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
    </dependencies>
    <scenes>
        <!--Login View Controller-->
        <scene sceneID="tne-QT-ifu">
            <objects>
                <viewController storyboardIdentifier="loginView" id="BYZ-38-t0r" customClass="LoginViewController" customModule="UnitTestWithArchitectureCore" customModuleProvider="target" sceneMemberID="viewController">
                    <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                        <subviews>
                            <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Email" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="4MS-Ig-PVd">
                                <rect key="frame" x="10" y="328.5" width="355" height="30"/>
                                <accessibility key="accessibilityConfiguration" hint="Campo de e-mail" identifier="txtMail"/>
                                <constraints>
                                    <constraint firstAttribute="height" constant="30" id="Ph3-Ug-4Uq"/>
                                </constraints>
                                <nil key="textColor"/>
                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                <textInputTraits key="textInputTraits"/>
                            </textField>
                            <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Password" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="BiO-mf-9HC">
                                <rect key="frame" x="10" y="369" width="355" height="30"/>
                                <accessibility key="accessibilityConfiguration" hint="Campo de senha" identifier="txtPass"/>
                                <constraints>
                                    <constraint firstAttribute="height" constant="30" id="6Bi-Ck-YFt"/>
                                </constraints>
                                <nil key="textColor"/>
                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                <textInputTraits key="textInputTraits"/>
                            </textField>
                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Htl-qV-vqK">
                                <rect key="frame" x="166" y="409" width="42" height="30"/>
                                <constraints>
                                    <constraint firstAttribute="width" constant="42" id="SVC-iT-9oe"/>
                                </constraints>
                                <state key="normal" title="Entrar"/>
                                <connections>
                                    <action selector="enter:" destination="BYZ-38-t0r" eventType="touchUpInside" id="qLg-Vc-anS"/>
                                </connections>
                            </button>
                            <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="InitialImage" translatesAutoresizingMaskIntoConstraints="NO" id="0wI-dW-YPW">
                                <rect key="frame" x="16" y="20" width="343" height="286"/>
                                <constraints>
                                    <constraint firstAttribute="height" constant="286" id="cMi-Yh-g7I"/>
                                </constraints>
                            </imageView>
                            <activityIndicatorView hidden="YES" opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" hidesWhenStopped="YES" style="gray" translatesAutoresizingMaskIntoConstraints="NO" id="cOI-VH-ywe">
                                <rect key="frame" x="177" y="323.5" width="20" height="20"/>
                            </activityIndicatorView>
                        </subviews>
                        <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                        <constraints>
                            <constraint firstItem="BiO-mf-9HC" firstAttribute="centerX" secondItem="6Tk-OE-BBY" secondAttribute="centerX" id="06s-gq-i22"/>
                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="BiO-mf-9HC" secondAttribute="trailing" constant="10" id="0UD-4O-M3g"/>
                            <constraint firstItem="Htl-qV-vqK" firstAttribute="centerX" secondItem="6Tk-OE-BBY" secondAttribute="centerX" id="0ZJ-mB-4F5"/>
                            <constraint firstItem="cOI-VH-ywe" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="0r4-de-ifv"/>
                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="0wI-dW-YPW" secondAttribute="trailing" constant="16" id="2zO-iV-C3C"/>
                            <constraint firstItem="BiO-mf-9HC" firstAttribute="top" secondItem="4MS-Ig-PVd" secondAttribute="bottom" constant="10" id="5l7-JD-RKQ"/>
                            <constraint firstItem="4MS-Ig-PVd" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="10" id="7ns-db-e6q"/>
                            <constraint firstItem="cOI-VH-ywe" firstAttribute="centerY" secondItem="8bC-Xf-vdC" secondAttribute="centerY" id="F6g-Sk-5nN"/>
                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="4MS-Ig-PVd" secondAttribute="trailing" constant="10" id="Hrb-Qg-lot"/>
                            <constraint firstItem="0wI-dW-YPW" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" id="Ka1-95-Lt1"/>
                            <constraint firstItem="BiO-mf-9HC" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="10" id="MgY-OA-XcN"/>
                            <constraint firstItem="0wI-dW-YPW" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="RdR-FQ-UZS"/>
                            <constraint firstItem="4MS-Ig-PVd" firstAttribute="centerX" secondItem="6Tk-OE-BBY" secondAttribute="centerX" id="SeY-Qy-TLZ"/>
                            <constraint firstItem="4MS-Ig-PVd" firstAttribute="top" secondItem="0wI-dW-YPW" secondAttribute="bottom" constant="22.5" id="Vdg-vs-ja2"/>
                            <constraint firstItem="0wI-dW-YPW" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="16" id="aMC-lJ-yEx"/>
                            <constraint firstItem="4MS-Ig-PVd" firstAttribute="centerY" secondItem="6Tk-OE-BBY" secondAttribute="centerY" id="rWh-3k-MBH"/>
                            <constraint firstItem="Htl-qV-vqK" firstAttribute="top" secondItem="BiO-mf-9HC" secondAttribute="bottom" constant="10" id="wbN-uo-UTn"/>
                        </constraints>
                        <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                    </view>
                    <connections>
                        <outlet property="indicatorView" destination="cOI-VH-ywe" id="seU-Nq-bC6"/>
                        <outlet property="txtMail" destination="4MS-Ig-PVd" id="YRU-e0-wZF"/>
                        <outlet property="txtPass" destination="BiO-mf-9HC" id="PGF-dI-1hk"/>
                    </connections>
                </viewController>
                <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
            </objects>
            <point key="canvasLocation" x="117.59999999999999" y="117.39130434782609"/>
        </scene>
        <!--Welcome View Controller-->
        <scene sceneID="Hpf-Sh-qh8">
            <objects>
                <viewController storyboardIdentifier="welcomeViewController" id="CLW-ji-BFT" customClass="WelcomeViewController" customModule="UnitTestWithArchitectureCore" customModuleProvider="target" sceneMemberID="viewController">
                    <view key="view" contentMode="scaleToFill" id="Gr8-LL-j3n">
                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                        <subviews>
                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="LXh-ea-nbH">
                                <rect key="frame" x="166" y="323" width="42" height="21"/>
                                <accessibility key="accessibilityConfiguration" identifier="lblWelcome"/>
                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                <nil key="textColor"/>
                                <nil key="highlightedColor"/>
                            </label>
                        </subviews>
                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                        <constraints>
                            <constraint firstItem="LXh-ea-nbH" firstAttribute="centerX" secondItem="Gr8-LL-j3n" secondAttribute="centerX" id="b7j-eS-tm4"/>
                            <constraint firstItem="LXh-ea-nbH" firstAttribute="centerY" secondItem="Gr8-LL-j3n" secondAttribute="centerY" id="lSN-Je-9pA"/>
                        </constraints>
                        <viewLayoutGuide key="safeArea" id="MN6-c5-bbE"/>
                    </view>
                </viewController>
                <placeholder placeholderIdentifier="IBFirstResponder" id="fqM-2z-qwT" userLabel="First Responder" sceneMemberID="firstResponder"/>
            </objects>
            <point key="canvasLocation" x="779" y="120"/>
        </scene>
    </scenes>
    <resources>
        <image name="InitialImage" width="750" height="578"/>
    </resources>
</document>
